# aolarhapsody

./: .commitlintrc.mjs  .dockerignore  .editorconfig  .eslintrc.js  .gitignore  .npmrc  .prettier.mjs  .prettierignore  .stylelintrc.js  README.en.md  README.md  codingaolarhapsodydocsaolapet-dictionary.md.md  commitlint.config.ts  cspell.json  docker-compose.yml  eslint.config.js  eslint.config.mjs  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stylelint.config.mjs  tsconfig.json
.github/workflows/: release.yml
backend/: .env.example  Dockerfile  astralspirit.ts  clothes.ts  game-data-parser.ts  headframe.ts  icondata.ts  index.ts  package.json  pet-parser.ts  pmdatalist.ts  skill-parser.ts
backend/dataparse/: astralspirit.ts  badwordcheck.ts  buff.ts  chatframe.ts  clothes.ts  commonbuff.ts  converter.ts  crystalkey.ts  existingactivity.ts  fetter.ts  file-cache.ts  galaxyfleetmark.ts  game-data-parser.ts  gamedataparser.ts  godcard.ts  headframe.ts  hk.ts  icondata.ts  index.ts  inscription.ts  item.ts  itemchest.ts  miracle.ts  petcard.ts  petcard2.ts  petdictionary.ts  petexchange.ts  petimage.ts  petskin.ts  petstone.ts  (+15 more)
docs/: index.md  package.json
frontend/: .env.example  .gitignore  .stylelintrc.js  eslint.config.js  index.html  landing.html  netlify.toml  package.json  postcss.config.js  tsconfig.json  vercel.json  vite.config.d.ts  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
scripts/: build-tauri-multi-platform.mjs  clean.mjs  setup-git-config.mjs  wait-for-backend.mjs
(+337 files in other folders)
