[package]
name = "app"
version = "0.1.0"
description = "Aolarhapsody Desktop App"
authors = ["Aolarhapsody Team"]
license = "MIT"
repository = "https://github.com/vmoranv/aolarhapsody"
edition = "2025"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.2", features = [] }
tauri-plugin-log = "2"

[package.metadata.bundle]
identifier = "com.aolarhapsody.desktop"
icon = ["icons/icon.ico", "icons/icon.png"]
category = "Productivity"
short_description = "Aolarhapsody Desktop Application"
long_description = "A modern desktop application for Aolarhapsody"

# Supported targets for cross-platform builds
[package.metadata.targets]
all = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "x86_64-unknown-linux-gnu"
]
